// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<Card
  className="AssetCard"
  padding="none"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    className="AssetCard__wrapper"
  >
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;

exports[`renders the component in loading state 1`] = `
<Card
  className="AssetCard"
  padding="none"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <AssetCardSkeleton />
</Card>
`;

exports[`renders the component with a custom drag handle 1`] = `
<Card
  cardDragHandleComponent={
    <CardDragHandle
      isDragActive={false}
      testId="cf-ui-card-drag-handle"
    >
      Reorder card
    </CardDragHandle>
  }
  className="AssetCard my-extra-class"
  padding="none"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <CardDragHandle
    isDragActive={false}
    testId="cf-ui-card-drag-handle"
  >
    Reorder card
  </CardDragHandle>
  <div
    className="AssetCard__wrapper"
  >
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;

exports[`renders the component with a drag handle 1`] = `
<Card
  className="AssetCard my-extra-class"
  padding="none"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
  withDragHandle={true}
>
  <CardDragHandle
    isDragActive={false}
    testId="cf-ui-card-drag-handle"
  >
    Reorder entry
  </CardDragHandle>
  <div
    className="AssetCard__wrapper"
  >
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;

exports[`renders the component with actions 1`] = `
<Card
  className="AssetCard"
  padding="none"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    className="AssetCard__wrapper"
  >
    <div
      className="AssetCard__header"
    >
      <CardActions
        className="AssetCard__actions"
        iconButtonProps={
          Object {
            "onClick": [Function],
          }
        }
        testId="cf-ui-card-actions"
      >
        <DropdownList
          testId="cf-ui-dropdown-list"
        >
          <DropdownListItem
            isActive={false}
            isDisabled={false}
            isTitle={true}
            testId="cf-ui-dropdown-list-item"
          >
            Actions
          </DropdownListItem>
          <DropdownListItem
            isActive={false}
            isDisabled={false}
            isTitle={false}
            onClick={[Function]}
            testId="cf-ui-dropdown-list-item"
          >
            Edit
          </DropdownListItem>
        </DropdownList>
      </CardActions>
    </div>
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;

exports[`renders the component with an additional class name 1`] = `
<Card
  className="AssetCard my-extra-class"
  padding="none"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    className="AssetCard__wrapper"
  >
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;

exports[`renders the component with status 1`] = `
<Card
  className="AssetCard"
  padding="none"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    className="AssetCard__wrapper"
  >
    <div
      className="AssetCard__header"
    >
      <Tag
        style={
          Object {
            "marginLeft": "auto",
          }
        }
        tagType="negative"
        testId="cf-ui-tag"
      >
        archived
      </Tag>
    </div>
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;

exports[`renders the component without actions 1`] = `
<Card
  className="AssetCard"
  padding="none"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    className="AssetCard__wrapper"
  >
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;
